# stac-fastapi-eodag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose-otel.yaml  docker-compose.yml  dockerignore  get_pypi_latest_version.sh  index.yaml  package-lock.json  package.json  pyproject.toml  renovate.json  setup.cfg  setup.py  tox.ini
.github/: RELEASING.md
.github/workflows/: build.yml  check-deps.yml  deploy.yml  package.yml  release.yml  semantic-release.yml  test.yml
config/: otelcol_config.yml
data/20-paginate-collection/: coverage.xml
data/adapt-to-collection-object/: coverage.xml
data/add-ci/: coverage.xml
data/add-filter-extension-items/: coverage.xml
data/add-helm-release/: coverage.xml
data/add-otel-collector-env-var/: coverage.xml
data/add-posargs-to-pytest-invocation/: coverage.xml
data/all-collections-slow/: coverage.xml
data/always-add-download-link/: coverage.xml
data/asyncio-loop-fix/: coverage.xml
data/bbox-point-fix/: coverage.xml
data/broken-datetime-filter/: coverage.xml
data/build-fix/: coverage.xml
data/build-image-footprint/: coverage.xml
data/ceos-test/: coverage.xml
data/changes-stream-download/: coverage.xml
data/ci-correct-tags/: coverage.xml
data/ci-fix-file-open/: coverage.xml
data/ci-package-with-eodag/: coverage.xml
data/ci-release-package/: coverage.xml
data/ci-uv-vrnv/: coverage.xml
data/collection-id-for-download-search/: coverage.xml
data/collections-instruments/: coverage.xml
data/count-global-setting/: coverage.xml
data/docker-git/: coverage.xml
data/eodag-stac-serialize-fix/: coverage.xml
data/eodag-v4/: coverage.xml
data/eodag-with-db/: coverage.xml
data/error-handling-improvments/: coverage.xml
data/extensions_label/: coverage.xml
data/filter_json/: coverage.xml
data/fix-asset-type-and-item-extensions/: coverage.xml
data/fix-ci/: coverage.xml
data/fix-external-collection-attributes/: coverage.xml
data/fix-free-text-all-collections/: coverage.xml
data/fix-instrument/: coverage.xml
data/fix-instruments-in-collections/: coverage.xml
data/fix-links/: coverage.xml
data/fix-logging/: coverage.xml
data/fix-methods-format/: coverage.xml
data/fix-queryables-id/: coverage.xml
data/fix-queryables-with-alias/: coverage.xml
data/fix-retriev_body-wekeo_main/: coverage.xml
data/fix-test/: coverage.xml
data/fix_adapt_queryables_param_value/: coverage.xml
data/gbif/: coverage.xml
data/host-info/: coverage.xml
data/main/: coverage.xml
data/make-pagination-optional/: coverage.xml
data/mime_type_downloadlink/: coverage.xml
data/no-eodag-git-dep/: coverage.xml
data/no-git-repo-in-deps/: coverage.xml
data/order-endpoint-not-working-with-geometry-filter-on-dedt_lumi/: coverage.xml
data/orderable-self-links/: coverage.xml
data/pagination_internal_fdp/: coverage.xml
data/pagination_next/: coverage.xml
data/peps_provider/: coverage.xml
data/prepare-0.2.0/: coverage.xml
data/redirect-presigned-urls/: coverage.xml
data/redirect-response/: coverage.xml
data/refactor-code/: coverage.xml
data/sortby_items/: coverage.xml
operator/: __init__.py  config.py
tests/: CEOS_E2E.py  __init__.py  conftest.py  test_CEOS.py  test_app.py  test_collections.py  test_dag.py  test_download.py  test_errors.py  test_links.py  test_order.py  test_queryables.py  test_requirements.py  test_search.py  test_telemetry.py  test_zarr.py
(+103 files in other folders)
